[tool.poetry]
name = "fabric-forked"
version = "3.2.2.post2"
description = "High level SSH command execution (forked by 'fabric')."
authors = [
    "Romanin <semina054@gmail.com>",
]
maintainers = [
    "Jeff Forcier <jeff@bitprophet.org>",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Clustering",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]

[tool.project.urls]
homepage = "https://github.com/fabric/fabric"
repository = "https://github.com/romanin-rf/fabric-forked"
documentation = "https://docs.fabfile.org"
"Issues" = "https://github.com/fabric/fabric/issues"
"Changelog" = "https://www.fabfile.org/changelog.html"
"CI" = "https://app.circleci.com/pipelines/github/fabric/fabric"
"Twitter" = "https://twitter.com/pyfabric"

[tool.project.scripts]
fabric = 'fabric_forked.main:program.run'

[tool.poetry.dependencies]
python = ">=3.10"
paramiko = "^3.5.0"
invoke = "^2.2.0"
typing-extensions = "^4.12.2"
decorator = "^5.1.1"

[tool.poetry.extras]
pytest = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
